--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
+                <strong class="number" data-number="6">0</strong>
                 <span>Article</span>
               </div>
             </div>
