--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     				<!-- Right-aligned Contact Me button -->
     				<ul class="navbar-nav nav ml-auto">
       					<li class="nav-item">
-        			<a href="https://drive.google.com/file/d/1_mkiQjjuhHJuX0EYPLS1RLN-zi1Z3TBg/view?usp=sharing" class="nav-link contact-btn">
+        			<a href="https://drive.google.com/file/d/1RG6VPG4Dp1FNNERsPjNS0LFNGrpB7qkS/view?usp=drive_link" class="nav-link contact-btn">
           			<span>Download CV</span>
         			</a>
       				</li>
